Bug 1263325 - Unbreak build with libc++ and config/gcc_hidden.h after bug 1239083. r=glandium

MozReview-Commit-ID: 4y4j6o7V54D