intl/update-icu.sh
@@ -59,7 +59,7 @@ for patch in \
  bug-1172609-timezone-recreateDefault.diff \
  bug-1198952-workaround-make-3.82-bug.diff \
  icu-release-56-1-flagparser-fix.patch \
- bug-1228227-libc++-gcc_hidden.diff \
+ bug-1228227-bug-1263325-libc++-gcc_hidden.diff \
 ; do
   echo "Applying local patch $patch"
   patch -d ${icu_dir}/../../ -p1 --no-backup-if-mismatch < ${icu_dir}/../icu-patches/$patch
